# phi-adapter-api

./: .gitignore  ADAPTER_README_TEMPLATE.md  CMakeLists.txt  README.md
cmake/: phi-adapter-apiConfig.cmake.in
debian/: changelog  control  copyright  files
debian/phi-adapter-api-dev/DEBIAN/: control  md5sums
debian/phi-adapter-api-dev/usr/share/doc/phi-adapter-api-dev/: copyright
include/phi/adapter/api/: adapterconfig.h  adapterfactory.h  adapterinterface.h  deviceupdate.h  discovery.h  discoveryquery.h  types.h
